Fri Sep  1 15:34:46 2000  Owen Taylor  <otaylor@redhat.com>

	* gdk/x11/gdkwindow-x11.c (gdk_window_move): Fix bug where
	moving a toplevel window immediately after sizing it would
	result in it being sized back to the old size since 
	impl->width, impl->height aren't updated until we hear
	back from the server. There is still a (longstanding) bug
	here that gdk_window_get_size() will give the wrong size
	until we do hear back.

2000-08-31  Havoc Pennington  <hp@redhat.com>

	* gtk/gtktextiter.h, gtk/gtktextiter.c, gtk/gtktextlayout.h, 
	gtk/gtktextlayout.c, gtk/gtktexttag.h, gtk/gtktexttag.c, 
	gtk/gtktexttagprivate.h, gtk/gtktextview.c:
	Rename GtkTextStyleValues to GtkTextAttributes

2000-08-31  Havoc Pennington  <hp@pobox.com>

	* gtk/gtktextbtree.c (GtkTextBTree): cache end line, 
	for rapid testing whether an iterator is the end iterator
	(gtk_text_btree_new): init end line cache
	(gtk_text_line_is_last): use fast cached line to 
	see if we're the last line.
	(get_last_line): use cached line here too, should 
	speed up some random unrelated code.
	
2000-08-30  Havoc Pennington  <hp@pobox.com>

	* gtk/gtkmarshal.list: Add marshallers for changed GtkTextBuffer
	signals.

	* gtk/gtktextbuffer.h: Add "interactive" arg to insert_text and
	delete_text signals. This allows the signals to be used for
	implementing undo.

	* gtk/gtktextbuffer.c: Change signal handler signatures; 
	provide "interactive" argument when emitting insert_text or
	delete_text signal.
	
2000-08-30  Havoc Pennington  <hp@pobox.com>

	* gtk/gtktextbuffer.c: Docs

Fri Aug 25 12:16:15 2000  Owen Taylor  <otaylor@redhat.com>

        * gdk/x11/gdkimage-x11.c: remove GDK_IMAGE_SHARED_PIXMAP
	from switch statements, since Tor removed the enumeration
	value.
	
	* gdk/x11/gdkimage-x11.c (gdk_image_get): 
	s/GDK_IS_WINDOW/GDK_IS_DRAWABLE/.

2000-08-29 Elliot Lee <sopwith@redhat.com>
	* */*.h: Use G_GNUC_CONST.

2000-08-27  Havoc Pennington  <hp@pobox.com>
